# Nete

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.h  nete.h
include/nete/: Component.h  Entity.h  Function.h  Observer.h  Signal.h  SignalBase.h  System.h  multivector.h  nete.h
include/nete/tl/: fast_vector.h  memory.h  multivector.h  type_traits.h  utility.h
tests/: catch.hpp  nete_signal_tests.cpp  nete_tests.cpp  nete_tl_tests.cpp
